--- a/inc-1/package.json
+++ b/inc-1/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "knex": "knex"
   },
   "author": "yuriploc",
   "license": "MIT",
